--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "keys": [
         {
-            "EL_key":  "",
-            "OAI_key": ""
+            "EL_key":  "b08f1b6f79f873c1d414e992c31e577d",
+            "OAI_key": "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"
         }
     ],
     "EL_data": [
