--- a/config.json
+++ b/config.json
@@ -2,12 +2,12 @@
     "keys": [
         {
             "EL_key":  "b08f1b6f79f873c1d414e992c31e577d",
-            "OAI_key": "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"
+            "OAI_key": "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"
         }
     ],
     "EL_data": [
         {
-          "voice": "MF3mGyEYCl7XYWbV9V6O"
+          "voice": "yoZ06aMxZJJ28mfd3POQ"
         }
 
     ],
